--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -9,5 +9,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "npm"
+
       - name: Install dependencies
         run: npm ci
